[package]
name = "treg"
version = "0.1.1"
edition = "2021"
description = "Tasks with progress status and registry"
license = "MIT"
repository = "https://github.com/aitrs/treg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.57"
async-trait = "0.1.56"